Add project APIs and handler.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ Temporary Items
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea
+
+# Local database
+sqlite.db
