--- a/web/package.json
+++ b/web/package.json
@@ -14,17 +14,20 @@
     "babel-loader": "^9.2.1",
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "style-loader": "^4.0.0",
-    "typescript": "^5.6.3",
+    "typescript": "^5.6.3"
+  },
+  "devDependencies": {
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "html-webpack-plugin": "^5.6.2",
+    "webpack-dev-server": "^5.1.0",
+    "webpack-cdn-plugin": "^3.3.1"
   },
   "scripts": {
     "start": "webpack serve --config webpack.config.js --mode development",
